--- a/MergeExcel/MergeExcel/App.config
+++ b/MergeExcel/MergeExcel/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <appSettings>
-        <add key="BaseFolder" value="D:\my\work\excels"/>
-        <add key="InputFolder" value="D:\my\work\excels\input"/>
+        <add key="BaseFolder" value="E:\my\work\excel"/>
+        <add key="InputFolder" value="E:\my\work\excel\input"/>
     </appSettings>
 </configuration>
